--- a/Aula_10_Cores2_Exercicio/src/index.html
+++ b/Aula_10_Cores2_Exercicio/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./output.css">
 </head>
 <body>
-    <h1 class="font-bold">Exercicio Tailwind CSS</h1>
+    <h1 class="font-bold text-center text-3xl p-7">Exercicio Tailwind CSS</h1>
     <div class="flex gap-6 items-center justify-center">
         <a class="rounded-2xl py-1 px-8 hover:bg-green-200 transition-colors duration-500 border-2 text-green-900 bg-green-100 border-green-400" href="/">Pago</a>
         <a class="rounded-2xl py-1 px-8 hover:bg-blue-200 transition-colors duration-500 border-2 text-blue-900 bg-blue-100 border-blue-400" href="/">Arquivado</a>
