fix: comments section 2

--- a/Projeto_Forest/src/index.html
+++ b/Projeto_Forest/src/index.html
@@ -65,6 +65,7 @@
 
     <!-- Section 2 Acomodações -->
     <section class="container grid lg:grid-cols-[2fr_3fr]  gap-8 pt-16 mb-12 sm:mb-16" id="acomodacoes">
+        <!-- List -->
         <div class="content-end bg-[url('./img/padrao.svg')] bg-no-repeat bg-contain">
             <h2 class="text-white mb-8 text-4xl font-serif lg:text-5xl">Refugio Natural</h2>
             <ul class="text-gray-200 *:flex *:items-center *:gap-4 space-y-4 sm:text-xl"> 
@@ -75,6 +76,7 @@
                 <li ><span class="h-0.5 w-6 bg-verde-400 inline-block"></span>Escolha a sua cabine preferida</li>
             </ul>
         </div>
+        <!-- Images -->
         <div class="grid grid-cols-[2fr_1fr] gap-4 sm:gap-8">
             <div class="col-span-full grid *:col-start-1 *:row-start-1">
                 <img class="h-52 w-full object-cover rounded-xl" src="./img/casa1.jpg" alt="Casa 1">
