--- a/Projeto_Forest/src/index.html
+++ b/Projeto_Forest/src/index.html
@@ -139,20 +139,23 @@
         Conecte-se com a natureza
       </p>
 
-      <h2 class="mb-8 mx-auto font-serif text-center max-w-screen-md text-balance text-white text-4xl sm:text-6xl">Cada Som, Cada Momento, Uma
-        Nova Descoberta</h2>
-        <div>
-          <div class="flex flex-col">
-            <h3 class="text-verde-300 text-2xl font-serif">Lua Nova</h3>
-            <div class="*:text-white">  
-              <!--  Parou no minuto 5:10 -->
-              <p>23</p>
-              <p>Março 2049</p>
-            </div>
-            <p class="text-white">Melhor periodo para observação astronômica. O céu estará claro e as estrelas visivéis</p>
-
+      <h2 class="mb-8 mx-auto font-serif text-center max-w-screen-md text-balance text-white text-4xl sm:text-6xl">Cada
+        Som, Cada Momento, Uma
+        Nova Descoberta
+      </h2>
+      <div>
+        <div class="grid gap-4 bg-verde-800 p-6 sm:p-8 rounded-xl">
+          <h3 class="text-verde-300 text-2xl font-serif">Lua Nova</h3>
+          <div class="text-white">
+            <!--  Parou no minuto 5:10 -->
+            <p class="font-serif text-5xl">23</p>
+            <p class="text-xl">Março 2049</p>
           </div>
+          <p class="text-gray-300 text-balance">Melhor periodo para observação astronômica. O céu estará claro e as
+            estrelas visivéis</p>
+          <a href="#contato" class="bg-verde-400 text-verde-900 py-2 px-4 rounded-full inline-block">Reservar 23/03</a>
         </div>
+      </div>
     </div>
   </section>
 </body>
