feat: add section contatos

--- a/Projeto_Forest/src/index.html
+++ b/Projeto_Forest/src/index.html
@@ -311,6 +311,61 @@
         </div>
 
     </section>
+
+    <!-- Section 6 Contatos -->
+    <section id="contato" class="container mb-12 sm:mb-16 grid lg:grid-cols-2 gap-8 lg:gap-8">
+
+            <div class="">
+                <h2 class="text-verde-300 text-4xl font-serif mb-4">Nossos Contatos</h2>
+                <p class="text-gray-200 text-balance mb-8">
+                    Tem interesse em passar uma temporada na Forest? Entre em contato com a genre por telefone ou email.
+                </p>
+                <div class="">
+                    <div class="">
+                        <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
+                        <h3 class="font-serif text-2xl mb-2 text-verde-300">Base</h3>
+                        <p class="text-gray-300">Rua da Mata, 123 - /floresta Nacional - RJ</p>
+                    </div>
+                    <div class="">
+                        <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
+                        <h3 class="font-serif text-2xl mb-2 text-verde-300">Email</h3>
+                        <p class="text-gray-300">contato@forest.com</p>
+                    </div>
+                    <div class="">
+                        <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
+                        <h3 class="font-serif text-2xl mb-2 text-verde-300">Telefone</h3>
+                        <p class="text-gray-300">21 98888-7777</p>
+                    </div>
+                </div>
+            </div>
+
+            <form class="grid gap-4 shadow-xl p-4 bg-verde-900 rounded-xl ">
+                <div class="grid gap-1 ">
+                    <label for="name" class="text-white">Nome</label>
+                    <input class="rounded-md border-2 bg-verde-800 border-verde-800 p-2 text-white focus:outline-none focus:ring-verde-400 focus:border-green-900 placeholder:text-verde-900" type="text" id="name" name="name" placeholder="Nome">
+
+                </div>
+                <div class="grid gap-4 sm:grid-cols-2">
+                    <div class="grid gap-1">
+                        <label for="email" class="text-white">Email</label>
+                        <input class="rounded-md border-2 bg-verde-800 border-verde-800 p-2 text-white focus:outline-none focus:ring-verde-400 focus:border-green-900 placeholder:text-verde-900" type="email" id="email" name="email" placeholder="Email">
+    
+                    </div>
+                    <div class="grid gap-1">
+                        <label for="telefone" class="text-white">Telefone</label>
+                        <input class="rounded-md border-2 bg-verde-800 border-verde-800 p-2 text-white focus:outline-none focus:ring-verde-400 focus:border-green-900 placeholder:text-verde-900" type="text" id="telefone" name="telefone" placeholder="(71) 99999-8888">
+    
+                    </div>
+                </div>
+                <div class="grid gap-1">
+                    <label for="mensagem" class="text-white">Mensagem</label>
+                    <textarea rows="5" class="rounded-md border-2 bg-verde-800 border-verde-800 p-2 text-white focus:outline-none focus:ring-verde-400 focus:border-green-900 placeholder:text-verde-900 resize-none" type="text" id="mensagem" name="mensagem"></textarea>
+
+                </div>
+                <button class="place-self-start px-8 bg-verde-400 text-verde-900 py-2 px-4 rounded-full inline-block" >Enviar Email</button>
+            </form>
+
+    </section>
 </body>
 
 </html>
