feat: add footer

--- a/Projeto_Forest/src/index.html
+++ b/Projeto_Forest/src/index.html
@@ -7,9 +7,8 @@
     <title>Forest</title>
     <link rel="stylesheet" href="output.css" />
 </head>
-<!-- ! remover o mb-96 do body -->
 
-<body class="bg-verde-800 font-sans mb-96">
+<body class="bg-verde-800 font-sans">
     <!-- Calendario e Clima -->
     <div class="container mt-4 flex justify-center md:justify-start">
         <div class="inline-flex items-center rounded-md bg-verde-900">
@@ -315,57 +314,112 @@
     <!-- Section 6 Contatos -->
     <section id="contato" class="container mb-12 sm:mb-16 grid lg:grid-cols-2 gap-8 lg:gap-8">
 
+        <div class="">
+            <h2 class="text-verde-300 text-4xl font-serif mb-4">Nossos Contatos</h2>
+            <p class="text-gray-200 text-balance mb-8">
+                Tem interesse em passar uma temporada na Forest? Entre em contato com a genre por telefone ou email.
+            </p>
             <div class="">
-                <h2 class="text-verde-300 text-4xl font-serif mb-4">Nossos Contatos</h2>
-                <p class="text-gray-200 text-balance mb-8">
-                    Tem interesse em passar uma temporada na Forest? Entre em contato com a genre por telefone ou email.
-                </p>
                 <div class="">
-                    <div class="">
-                        <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
-                        <h3 class="font-serif text-2xl mb-2 text-verde-300">Base</h3>
-                        <p class="text-gray-300">Rua da Mata, 123 - /floresta Nacional - RJ</p>
-                    </div>
-                    <div class="">
-                        <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
-                        <h3 class="font-serif text-2xl mb-2 text-verde-300">Email</h3>
-                        <p class="text-gray-300">contato@forest.com</p>
-                    </div>
-                    <div class="">
-                        <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
-                        <h3 class="font-serif text-2xl mb-2 text-verde-300">Telefone</h3>
-                        <p class="text-gray-300">21 98888-7777</p>
-                    </div>
+                    <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
+                    <h3 class="font-serif text-2xl mb-2 text-verde-300">Base</h3>
+                    <p class="text-gray-300">Rua da Mata, 123 - /floresta Nacional - RJ</p>
+                </div>
+                <div class="">
+                    <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
+                    <h3 class="font-serif text-2xl mb-2 text-verde-300">Email</h3>
+                    <p class="text-gray-300">contato@forest.com</p>
+                </div>
+                <div class="">
+                    <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
+                    <h3 class="font-serif text-2xl mb-2 text-verde-300">Telefone</h3>
+                    <p class="text-gray-300">21 98888-7777</p>
                 </div>
             </div>
+        </div>
 
-            <form class="grid gap-4 shadow-xl p-4 bg-verde-900 rounded-xl ">
-                <div class="grid gap-1 ">
-                    <label for="name" class="text-white">Nome</label>
-                    <input class="rounded-md border-2 bg-verde-800 border-verde-800 p-2 text-white focus:outline-none focus:ring-verde-400 focus:border-green-900 placeholder:text-verde-900" type="text" id="name" name="name" placeholder="Nome">
+        <form class="grid gap-4 shadow-xl p-4 bg-verde-900 rounded-xl ">
+            <div class="grid gap-1 ">
+                <label for="name" class="text-white">Nome</label>
+                <input
+                    class="rounded-md border-2 bg-verde-800 border-verde-800 p-2 text-white focus:outline-none focus:ring-verde-400 focus:border-green-900 placeholder:text-verde-900"
+                    type="text" id="name" name="name" placeholder="Nome">
 
-                </div>
-                <div class="grid gap-4 sm:grid-cols-2">
-                    <div class="grid gap-1">
-                        <label for="email" class="text-white">Email</label>
-                        <input class="rounded-md border-2 bg-verde-800 border-verde-800 p-2 text-white focus:outline-none focus:ring-verde-400 focus:border-green-900 placeholder:text-verde-900" type="email" id="email" name="email" placeholder="Email">
-    
-                    </div>
-                    <div class="grid gap-1">
-                        <label for="telefone" class="text-white">Telefone</label>
-                        <input class="rounded-md border-2 bg-verde-800 border-verde-800 p-2 text-white focus:outline-none focus:ring-verde-400 focus:border-green-900 placeholder:text-verde-900" type="text" id="telefone" name="telefone" placeholder="(71) 99999-8888">
-    
-                    </div>
+            </div>
+            <div class="grid gap-4 sm:grid-cols-2">
+                <div class="grid gap-1">
+                    <label for="email" class="text-white">Email</label>
+                    <input
+                        class="rounded-md border-2 bg-verde-800 border-verde-800 p-2 text-white focus:outline-none focus:ring-verde-400 focus:border-green-900 placeholder:text-verde-900"
+                        type="email" id="email" name="email" placeholder="Email">
+
                 </div>
                 <div class="grid gap-1">
-                    <label for="mensagem" class="text-white">Mensagem</label>
-                    <textarea rows="5" class="rounded-md border-2 bg-verde-800 border-verde-800 p-2 text-white focus:outline-none focus:ring-verde-400 focus:border-green-900 placeholder:text-verde-900 resize-none" type="text" id="mensagem" name="mensagem"></textarea>
+                    <label for="telefone" class="text-white">Telefone</label>
+                    <input
+                        class="rounded-md border-2 bg-verde-800 border-verde-800 p-2 text-white focus:outline-none focus:ring-verde-400 focus:border-green-900 placeholder:text-verde-900"
+                        type="text" id="telefone" name="telefone" placeholder="(71) 99999-8888">
 
                 </div>
-                <button class="place-self-start px-8 bg-verde-400 text-verde-900 py-2 px-4 rounded-full inline-block" >Enviar Email</button>
-            </form>
+            </div>
+            <div class="grid gap-1">
+                <label for="mensagem" class="text-white">Mensagem</label>
+                <textarea rows="5"
+                    class="rounded-md border-2 bg-verde-800 border-verde-800 p-2 text-white focus:outline-none focus:ring-verde-400 focus:border-green-900 placeholder:text-verde-900 resize-none"
+                    type="text" id="mensagem" name="mensagem"></textarea>
+
+            </div>
+            <button class="place-self-start px-8 bg-verde-400 text-verde-900 py-2 px-4 rounded-full inline-block">Enviar
+                Email</button>
+        </form>
 
     </section>
+
+    <!-- Section 7 Parceiros -->
+    <section class="container mb-12 sm:mb-16">
+        <ul
+            class="flex flex-col items-center sm:justify-center py-4 max-sm:divide-y-2 max-sm:divide-verde-900 *:p-4 sm:flex-row sm:gap-8 sm:border-b-2 sm:border-t-2 sm:border-verde-900 sm:py-8 *:*:max-h-8">
+            <li><img src="./img/parceiros/caravan.svg" alt="Caravan" /></li>
+            <li><img src="./img/parceiros/dogs.svg" alt="Dogs" /></li>
+            <li><img src="./img/parceiros/wildbeast.svg" alt="Wildbeast" /></li>
+            <li><img src="./img/parceiros/lescone.svg" alt="Lescone" /></li>
+            <li><img src="./img/parceiros/surfbot.svg" alt="Surfbot" /></li>
+        </ul>
+    </section>
+
+    <!-- Footer -->
+    <footer class="container pb-8">
+        <div class="bg-verde-900 grid lg:grid-cols-2 mb-8 rounded-2xl p-6 sm:p-12 justify-between  gap-8">
+            <div class="flex gap-12 max-sm:flex-col max-sm:gap-4">
+
+                <div class="">
+                    <h3 class="text-white font-serif mb-4 text-xl">Endereço</h3>
+                    <p class="text-gray-400">Rua da Mata, 123<br>Floresta Nacional<br>Rio de Janeiro, RJ</p>
+                </div>
+                <div class="">
+                    <h3 class="text-white font-serif mb-4 text-xl">Contato</h3>
+                    <p class="text-gray-400">contato@forest.com<br>+55 21 99999-8888</p>
+                </div>
+
+            </div>
+
+            <div class="lg:justify-self-end">
+                <img class="mb-4" src="./img/forest.svg" alt="Forest">
+                <p class="text-gray-400">Conect-se com a natureza.</p>
+            </div>
+        </div>
+
+
+        <div class="text-gray-400 flex items-center justify-between gap-8 max-sm:flex-col-reverse">
+            <p>&copy 2025 Forest. Todos os direitos reservados.</p>
+            <ul class="flex gap-8">
+                <li><a class="hover:text-verde-300" href="#">Instagram</a></li>
+                <li><a class="hover:text-verde-300" href="#">Linkedin</a></li>
+                <li><a class="hover:text-verde-300" href="#">Facebook</a></li>
+            </ul>
+        </div>
+
+    </footer>
 </body>
 
 </html>
